--- a/package.json
+++ b/package.json
@@ -11,9 +11,12 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.315.0",
+    "aws-sdk": "^2.1360.0",
     "cors": "^2.8.5",
     "express": "^4.18.2",
     "express-validator": "^6.15.0",
+    "node": "^19.8.1",
     "package": "^1.0.1",
     "pg": "^8.10.0",
     "promise": "^8.3.0",
