--- a/netlify.toml
+++ b/netlify.toml
@@ -1,4 +1,4 @@
 [build]
-    command = "npm start"
-    publish = "build"
-    branch = "master@HEAD"
+  command = "npm run build && node build/server.js"
+  publish = "build"
+  branch = "master@HEAD"
