--- a/netlify.toml
+++ b/netlify.toml
@@ -1,4 +1,3 @@
-[build]
-  command = "npm run build && node build/server.js"
-  publish = "build"
-  branch = "master@HEAD"
+[run]
+command = "NODE_ENV=production DATABASE_URL=postgres://hunterstorm:DigitalCrafts@cloud-database-instance.ccpqgrq3czty.us-west-2.rds.amazonaws.com:5432/cloud_database npm start"
+port = 3000
