--- a/package.json
+++ b/package.json
@@ -4,8 +4,7 @@
   "description": "",
   "main": "src/server.js",
   "scripts": {
-    "start": "node src/server.js",
-    "build": "mkdir -p build && cp -r src/* build/ && cp package.json build/ && cd build && npm install"
+    "start": "node src/server.js"
   },
   "keywords": [],
   "author": "",
